something not right

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-VITE_APIG_URL=https://wnzur1kwrb.execute-api.us-east-1.amazonaws.com/prod
+VITE_REGION=us-east-1
+VITE_API_ENDPOINT=https://wnzur1kwrb.execute-api.us-east-1.amazonaws.com/prod
+VITE_USER_POOL_ID=us-east-1_Jd2sZwtXP
+VITE_USER_POOL_CLIENT_ID=5kbcdud9q4k5o98ose1impism5
+VITE_COGNITO_DOMAIN=https://matt-test-285311912596-auth.auth.us-east-1.amazoncognito.com
