--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^5.0.0",
     "@aws-sdk/lib-dynamodb": "^3.751.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
-    "aws-sdk": "^2.1692.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "aws-amplify": "^5.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
